--- a/XMLWeather/XMLWeather.csproj
+++ b/XMLWeather/XMLWeather.csproj
@@ -67,6 +67,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchScreen.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SearchScreen.Designer.cs">
+      <DependentUpon>SearchScreen.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CurrentScreen.resx">
       <DependentUpon>CurrentScreen.cs</DependentUpon>
     </EmbeddedResource>
@@ -86,6 +92,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SearchScreen.resx">
+      <DependentUpon>SearchScreen.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -131,6 +140,39 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Weer-Weather-Sun-littlecloud-rain.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\night.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sun.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sun2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\night1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sunbg1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\nightbg.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sunbg2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\nightbg2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sunbg3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\nightbg3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Custom-Icon-Design-Flatastic-1-Cancel.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
