--- a/XMLWeather/XMLWeather.csproj
+++ b/XMLWeather/XMLWeather.csproj
@@ -174,6 +174,12 @@
   <ItemGroup>
     <None Include="Resources\Custom-Icon-Design-Flatastic-1-Cancel.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pixelkit-Gentle-Edges-Zoom.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icons8-Ios7-Very-Basic-Search.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
